k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: neochat
  labels:
    name: neochat
    environment: production
