k8s/neochat-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
  namespace: neochat
  labels:
    app: chat-service
    component: backend
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: chat-service

---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: neochat
  labels:
    app: admin-service
    component: backend
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app: admin-service
